--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -64,6 +64,11 @@
     </welcome-file-list>
     
     <error-page>
+    	<error-code>400</error-code>
+    	<location>/WEB-INF/views/error/400.jsp</location>
+    </error-page>
+    
+    <error-page>
     	<error-code>404</error-code>
     	<location>/WEB-INF/views/error/404.jsp</location>
     </error-page>
