--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -79,7 +79,7 @@
     </error-page>
 
 
-	session 유효시간 설정(분단위)
+	<!-- session 유효시간 설정(분단위) -->
 	<session-config>
 		<session-timeout>180</session-timeout>
 	</session-config>
