--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -63,7 +63,7 @@
     	<welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
     
-    <error-page>
+    <!-- <error-page>
     	<error-code>400</error-code>
     	<location>/WEB-INF/views/error/400.jsp</location>
     </error-page>
@@ -76,7 +76,7 @@
     <error-page>
     	<error-code>500</error-code>
     	<location>/WEB-INF/views/error/500.jsp</location>
-    </error-page>
+    </error-page> -->
 
 
 	<!-- session 유효시간 설정(분단위) -->
